# Odysseia

./: .gitignore  Cargo.toml  EXPANSION_III_BOSSES.md  EXPANSION_II_BOSSES.md  PURCHASE_ENGINE_DESIGN.md  README.md  dependency-reduced-pom.xml  pom.xml
.github/workflows/: ci.yml
crates/odysseia-automation/: Cargo.toml
crates/odysseia-automation/src/: lib.rs
crates/odysseia-core/: Cargo.toml
crates/odysseia-core/src/: boss.rs  chat.rs  dragon.rs  items.rs  lib.rs  math.rs  moderation.rs  skills.rs  troll.rs
crates/odysseia-ffi/: Cargo.toml
crates/odysseia-ffi/src/: lib.rs
crates/odysseia-horror/: Cargo.toml
crates/odysseia-horror/src/: lib.rs
crates/odysseia-server/: Cargo.toml
crates/odysseia-server/src/: main.rs
crates/odysseia-store/: Cargo.toml
crates/odysseia-store/src/: lib.rs
crates/odysseia-telemetry/: Cargo.toml
crates/odysseia-telemetry/src/: lib.rs
src/main/java/org/metamechanists/odysseia/: Odysseia.java
src/main/java/org/metamechanists/odysseia/boss/: BossManager.java  OdysseyBoss.java
src/main/java/org/metamechanists/odysseia/commands/: BloodMoonCommand.java  BossCommand.java  DailyCommand.java  EsteUsuarioEsViejoCommand.java  HorrorFogCommand.java  KitCommand.java  KitGiveCommand.java  LenadorCommand.java  OwnerAuraCommand.java  PapaDeMarCommand.java  PurchaseCommand.java  ReloadCommand.java  SafeRestartCommand.java  SellInventoryCommand.java  StoreAnnounceCommand.java  TrollCommand.java  VanishCommand.java
src/main/java/org/metamechanists/odysseia/dragon/: DragonFlightPolicy.java  DragonMountService.java
src/main/java/org/metamechanists/odysseia/events/: BloodMoonManager.java  HorrorNightScheduler.java
src/main/java/org/metamechanists/odysseia/integrations/: DiosesDrakesBossBridge.java  DiscordTranslationBridgeService.java  SFMasterPassExpiry.java  SlimefunGuideBridge.java  StarTelemetryPublisher.java
src/main/java/org/metamechanists/odysseia/items/: OdysseyItemManager.java
src/main/java/org/metamechanists/odysseia/kits/: KitClaimService.java  StarterKitPolicy.java
src/main/java/org/metamechanists/odysseia/listeners/: ArmorEffectsListener.java  AutomationGuardListener.java  AutomationGuardPolicy.java  BossItemListener.java  ChatFilterListener.java  (+10 more)
src/main/resources/: config.yml  plugin.yml  purchases.yml
src/main/resources/db/migration/: V1__purchase_engine.sql  V2__financial_events.sql  V3__player_identities.sql
src/test/java/org/metamechanists/odysseia/: ConfigDefaultsMergeTest.java
(+92 files in other folders)
