[workspace]
resolver = "2"
members = [
    "crates/odysseia-core",
    "crates/odysseia-automation",
    "crates/odysseia-horror",
    "crates/odysseia-store",
    "crates/odysseia-telemetry",
    "crates/odysseia-ffi",
    "crates/odysseia-server",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
authors = ["Jack <DrakesCraft Labs>"]
license = "MIT"
repository = "https://github.com/DrakesCraft-Labs/Odysseia-Rust"
description = "Odysseia Engine rewritten in Rust for Paper/Purpur 1.21.11 and Star server"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
